basic fetch and display of word data,

--- a/popup/info.html
+++ b/popup/info.html
@@ -11,9 +11,9 @@
     <body>
         <div class="word-info"> 
             <p id="selected-text"></p>
-            <p>{classification}</p>
-            <p>{tag}</p>
-            <p>{meaning}</p>
+            <p id="reading"></p>
+            <p id="meaning"></p>
+            <p id="tag"></p>
         </div>
 
         <hr class="line">
