Gets anki decks from anki connect and saves chosen deck.

--- a/popup/info.html
+++ b/popup/info.html
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="info.css" />
-
         <script src="info.js"></script>
-
     </head>
 
     <body>
@@ -19,10 +17,7 @@
         <hr class="line">
 
         <div class="anki-meny">
-            <select name="ankidecks" class="dropdown" id="decks">
-                <option value="deck 1">deck 1</option>
-                <option value="deck 2">deck 2</option>
-                <option value="deck 3">deck 3</option>
+            <select id="anki-decks">
             </select>
             <input type="text" class="example" placeholder="Example sentence (例)"/> <br>
         </div>
