basic note add implemented

--- a/popup/info.html
+++ b/popup/info.html
@@ -19,12 +19,10 @@
         <div class="anki-meny">
             <select id="anki-decks">
             </select>
-            <input type="text" class="example" placeholder="Example sentence (例)"/> <br>
+            <input type="text" class="example" id="example" placeholder="Example sentence (例)"/> <br>
         </div>
 
-        <div class="popup-content">     
-          <button>ADD</button>
-        </div>
+        <button id="add-button">ADD</button>
 
     </body>
 
