added check for when adding example sentences.

--- a/popup/info.html
+++ b/popup/info.html
@@ -19,7 +19,7 @@
         <div class="anki-meny">
             <select id="anki-decks">
             </select>
-            <input type="text" class="example" id="example" placeholder="Example sentence (例)"/> <br>
+        <input type="text" class="example" id="example" placeholder="Example sentence (例文)"/> <br>
         </div>
 
         <button id="add-button">ADD</button>
