Added text for when adding a new entry.

--- a/popup/info.html
+++ b/popup/info.html
@@ -17,8 +17,7 @@
         <hr class="line">
 
         <div class="anki-meny">
-            <select id="anki-decks">
-            </select>
+            <select id="anki-decks"></select> <p id="status-message"></p>
         <input type="text" class="example" id="example" placeholder="Example sentence (例文)"/> <br>
         </div>
 
