finds godan endings in non.past form

--- a/popup/info.html
+++ b/popup/info.html
@@ -18,7 +18,12 @@
 
         <div class="anki-meny">
             <select id="anki-decks"></select> <p id="status-message"></p>
-        <input type="text" class="example-sentence" id="sentence" placeholder="Example sentence (例文)" autoFocus/> <br>
+            
+            <input type="text" 
+            class="example-sentence" 
+            id="sentence" 
+            placeholder="Example sentence (例文)" 
+            autoFocus/> <br>
         </div>
 
         <button id="add-button">ADD</button>
