formatting in popup window

--- a/popup/info.html
+++ b/popup/info.html
@@ -10,8 +10,7 @@
         <div class="word-info"> 
             <p id="reading"></p>
             <p id="selected-text"></p>
-            <p id="tag"></p>
-            <p id="meaning"></p>
+            <p id="description"></p>
         </div>
 
         <hr class="line">
