improved formatting in ankicards, feature: choosing reading instead of kanji.

--- a/popup/info.html
+++ b/popup/info.html
@@ -18,7 +18,7 @@
 
         <div class="anki-meny">
             <select id="anki-decks"></select> 
-            <input type="checkbox" id="kana-reading" onchange={}/>
+            <input type="checkbox" id="kana-reading"/>
             <label for="kana-reading">use Kana reading</label>
             <p id="status-message"></p>
             <input type="text" 
