use hiragana button works, shows in popup ifword is not found.

--- a/popup/info.html
+++ b/popup/info.html
@@ -2,10 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="info.css" />
-        <script src="info.js"></script>
+        <link rel="stylesheet" href="info.css"/>
     </head>
-
     <body>
         <div class="word-info"> 
             <p id="reading"></p>
@@ -19,7 +17,7 @@
         <div class="anki-meny">
             <select id="anki-decks"></select> 
             <input type="checkbox" id="kana-reading"/>
-            <label for="kana-reading">use Kana reading</label>
+            <label for="kana-reading">Use hiragana</label>
             <p id="status-message"></p>
             <input type="text" 
             class="example-sentence" 
@@ -30,8 +28,7 @@
         </div>
 
         <button id="add-button">ADD</button>
-
+        <script async src="info.js"></script>
     </body>
-
 
 </html> 
