basic verb conjugation recognition done, displays selected word along with what forms found.

--- a/popup/info.html
+++ b/popup/info.html
@@ -8,6 +8,7 @@
         <div class="word-info"> 
             <p id="reading"></p>
             <p id="selected-text"></p>
+            <p id="conjugation"></p>
             <p id="additional-info"></p>
             <p id="description"></p>
         </div>
