duplicate word check implemented, refactored addnote function,  in example sentence can press enter to add word.

--- a/popup/info.html
+++ b/popup/info.html
@@ -20,11 +20,13 @@
             <input type="checkbox" id="kana-reading"/>
             <label for="kana-reading">Use hiragana</label>
             <p id="status-message"></p>
-            <input type="text" 
-            class="example-sentence" 
-            id="sentence" 
-            placeholder="Example sentence (例文)" 
-            autoFocus/>
+            <form id="note-form">
+                <input type="text" 
+                class="example-sentence" 
+                id="sentence" 
+                placeholder="Example sentence (例文)" 
+                autoFocus/>
+            </form>
             <br>
         </div>
 
