added feature to update notes. fixed words with no kanji, not being able to be added.

--- a/popup/info.html
+++ b/popup/info.html
@@ -30,7 +30,8 @@
             <br>
         </div>
 
-        <button id="add-button">ADD</button>
+        <button id="add-button" class="add-button">ADD</button>
+        <button id="update-button" class="update-button">UPDATE</button>
         <script async src="info.js"></script>
     </body>
 
