reworked furigana, to fix issues with wrong display on words with hiragana in the middle. added jlpt to ankitags. space of status message tag removed in popup.

--- a/popup/info.html
+++ b/popup/info.html
@@ -19,7 +19,7 @@
             <select id="anki-decks"></select> 
             <input type="checkbox" id="kana-reading"/>
             <label for="kana-reading">Use hiragana</label>
-            <p id="status-message"></p>
+            <p id="status-message" class="status-message"></p>
             <form id="note-form">
                 <input type="text" 
                 class="example-sentence" 
@@ -34,5 +34,5 @@
         <button id="update-button" class="update-button">UPDATE</button>
         <script async src="info.js"></script>
     </body>
-
+    
 </html> 
