Feature: decks are now saved persistantly, prettier css on popup, reworked fetching of audio. Now fetches audio when add button is hovered instead of when word is marked.

--- a/popup/info.html
+++ b/popup/info.html
@@ -10,16 +10,15 @@
             <p id="selected-text"></p>
             <p id="conjugation"></p>
             <p id="additional-info"></p>
-            <p id="description"></p>
         </div>
+        <p id="description"></p>
 
         <hr class="line">
-
+        <p id="status-message" class="status-message">.</p>
         <div class="anki-meny">
-            <select id="anki-decks"></select> 
+            <select id="anki-decks"></select>
             <input type="checkbox" id="kana-reading"/>
             <label for="kana-reading">Use hiragana</label>
-            <p id="status-message" class="status-message"></p>
             <form id="note-form">
                 <input type="text" 
                 class="example-sentence" 
